<resources>
    <string name="app_name">SpiffyShow</string>
    <string name="app_name_dev">SpiffyShowDev</string>
    <string name="loading">Loading&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got it</string>
    <string name="register_or_login">Register / Login</string>
    <string name="enter_phone_number">Enter your phone number to continue</string>
    <string name="choose_country">CHOOSE COUNTRY</string>
    <string name="india">India</string>
    <string name="_91">+ 91</string>
    <string name="enter_mobile_number">Enter phone number</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_verification_code">Enter the 6 digits OTP</string>
    <string name="verify_otp">VERIFY</string>
    <string name="register">Register</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="change_number">CHANGE NUMBER?</string>
    <string name="no_otp">Did not received OTP?</string>
    <string name="no_account">New to SpiffyShow?</string>
    <string name="auth_progress">Authentication is in progress please wait&#8230;</string>
    <string name="sending_otp">Please wait&#8230; Sending OTP again..</string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="neverAsk">Never asking again</string>
    <string name="logout">Logout</string>
    <string name="registration">Registration</string>
    <string name="name">Full Name</string>
    <string name="category_name">Category Name</string>
    <string name="item_name">Product Name</string>
    <string name="category_desc">Category Description</string>
    <string name="item_desc">Product Description</string>
    <string name="price">Price</string>
    <string name="image_url">Image URL</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="pin_code">Pincode</string>
    <string name="bio">Bio</string>
    <string name="state">State</string>
    <string name="location">Location</string>
    <string name="okay">Okay</string>
    <string name="notification_for_status">SpiffyShow accessing location</string>
    <string name="permission_location">App need to access your location</string>
    <string name="google_maps_key">AIzaSyA8XcPlgDMw-Gg5j_5bJ9tH1wsxxpHXgRk</string>
    <string name="mobile_number_verification">Mobile Number Verification</string>
    <string name="otp_sent_to">OTP sent to</string>
    <string name="request_from">Request from</string>
    <string name="mechanic">Mechanic</string>
    <string name="doctor">Doctor</string>
    <string name="select_specialization">Select Specialization</string>
    <string name="continue_button">Continue</string>
    <string name="explore_items">Explore items</string>
    <string name="explore">Explore</string>
    <string name="admin_home">Admin Home</string>
    <string name="home">Home</string>
    <string name="home_nav">Home</string>
    <string name="notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="you_are_here">You are here</string>
    <string name="share_app">Share app</string>
    <string name="about">About app</string>
    <string name="featured">Featured</string>
    <string name="search">Search&#8230;</string>
    <string name="search_without_colon">Search</string>
    <string name="search_category">Search Category&#8230;</string>
    <string name="mobile_number">Mobile number</string>
    <string name="feedback">Feedback:</string>
    <string name="feedback_no_colon">Feedback</string>
    <string name="support">Support:</string>
    <string name="open_chat_window">Open chat window</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="request_details">Request Details:</string>
    <string name="thank_you_message">Thank you for using SpiffyShow \n Hope your request is fulfilled</string>
    <string name="how_did_you_like_our_service">How did you like our service?</string>
    <string name="write_your_feedback">Write your feedback&#8230;</string>
    <string name="submit">Submit</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="empty_result">No data!</string>
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="no_items">No items to display</string>
    <string name="send">SEND</string>
    <string name="notification">Notification from SpiffyShow</string>
    <string name="address">Location</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="rs">\u20B9</string>
    <string name="close">X</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_comment">Enter comment</string>
    <string name="total_items">Total items:</string>
    <string name="total">Total Cost:</string>
    <string name="payment_mode">Payment mode:</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="delivery_cost">Delivery cost:</string>
    <string name="free">Free</string>
    <string name="note">Note</string>
    <string name="place_order">Place order</string>
    <string name="delivery_charge">10 to 20 \u20B9</string>
    <string name="no_orders">No orders to display</string>
    <string name="please_call_by_order">For now order by call</string>
    <string name="order_by_call">Order by call</string>
    <string name="order_by_whats_app">Order by WhatsApp</string>
    <string name="error_message">Something went wrong, please order by call for now</string>
    <string name="no_network">No internet available please check internet and try again</string>
    <string name="no_mobile_number">Please enter mobile number</string>
    <string name="enter_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="thanks_order_message">Thank you for placing the order. We will call you on the mobile number to confirm the order!</string>
    <string name="order_time_message">Sorry! We can not process this order. We only deliver between 10 AM to 8 PM</string>
    <string name="no_item_select_message">Please select at least one item to place order</string>
    <string name="alert">Alert</string>
    <string name="empty">Empty</string>
    <string name="empty_description">No Data</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="item_details">Product Details</string>
    <string name="order_details">Order Details</string>
    <string name="no_notifications">No notifications to display</string>
    <string name="no_categories">No categories to display</string>
    <string name="upload">Upload</string>
    <string name="checkout">Checkout</string>
    <string name="cart_items">Cart Items</string>
    <string name="no_data">No data</string>
    <string name="please_enter_mobile">Please enter your 10 digit mobile number</string>
    <string name="please_enter_address">Please enter your address to deliver</string>
    <string name="save">Save</string>
    <string name="interest">Interests</string>
    <string name="navigate_via_google_map">Navigate via Google Map</string>
    <string name="dummy_text">Dummy text Its function as a filler or as a tool for comparing the visual impression of different typefaces Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with \'real\' content. This is required when, for example, the final text is not yet available. Dummy text is also known as \'fill text\'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have a \'ready-made\' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.  The usefulness of nonsensical content Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. Due to its widespread use as filler text for layouts, non-readability is of great importance: human perception is tuned to recognize certain patterns and repetitions in texts. If the distribution of letters and \'words\' is random, the reader will not be distracted from making a neutral judgement on the visual impact and readability of the typefaces (typography), or the distribution of text on the page (layout or type area). For this reason, dummy text usually consists of a more or less random series of words or syllables. This prevents repetitive patterns from impairing the overall visual impression and facilitates the comparison of different typefaces. Furthermore, it is advantageous when the dummy text is relatively realistic so that the layout impression of the final publication is not compromised.</string>
    <string name="something_went_wrong">Something went wrong. Try later.</string>
    <string name="something_went_wrong_server">Something went wrong at server side. Try later.</string>
    <string name="update_success">Updated successfully</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_code">The verification code entered was invalid</string>
    <string name="file_path_error">Unable to get the selected file path</string>
    <string name="items">Products</string>
    <string name="user_location_not_updated">User location not yet updated to navigate via map</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="category_info">Category Info</string>
    <string name="product_info">Product Info</string>
    <string name="weight">Weight</string>
    <string name="offer">Offer</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="likes">Likes</string>
    <string name="day_ago">1 day ago</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="trim_and_upload_video">Trim and upload video</string>
    <string name="add_video">Add Video</string>
    <string name="category">Category</string>
    <string name="s">S</string>
    <string name="follow"> + Follow</string>
    <string name="trim">Trim Video</string>
    <string name="profile">Profile</string>
    <string name="trims">Trims</string>
    <string name="followers">Followers</string>
    <string name="originals">Originals</string>
    <string name="share">Share</string>
    <string name="comment">Comments</string>
    <string name="add_a_comment">Add a comment&#8230;</string>
    <string name="post">Post</string>
    <string name="file_size_exceed">File size is exceeded, supports up to 1 GB only.</string>
    <string name="file_not_exists_error">File not found in the given location</string>
    <string name="file_not_exists">File Not Exists</string>
    <string name="enter_url">Enter youtube URL</string>
    <string name="enter_original_url">Enter original URL</string>
    <string name="upload_file">Upload a Video</string>
    <string name="choose_from_device">Add From Gallery</string>
    <string name="add_external_link">Add From URL</string>
    <string name="choose_upload_option_text">Select an option to upload your video</string>
    <string name="following">Following</string>
</resources>