<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stateLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:visibility="gone"
    tools:visibility="visible">

    <ProgressBar
        android:id="@+id/stateProgress"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stateProgress"
        android:layout_marginTop="@dimen/spacing_micro"
        android:gravity="center"
        android:text="@string/please_wait"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/stateEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            android:id="@+id/emptyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <TextView
            android:id="@+id/emptyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_description"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/stateError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/reload"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_icon_reload"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/error"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Error loading" />

        <Button
            android:id="@+id/retry"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry" />

    </LinearLayout>

</RelativeLayout>