<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_double"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:gravity="center"
            android:padding="@dimen/spacing_double"
            android:text="@string/thank_you_message"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_double"
            android:text="@string/feedback_no_colon"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize=".5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double2"
            android:gravity="center"
            android:padding="@dimen/spacing_normal"
            android:text="@string/how_did_you_like_our_service"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedbackET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_double2"
                android:background="@drawable/border_edit_text"
                android:hint="@string/write_your_feedback"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:maxLines="5"
                android:minLines="5"
                android:paddingHorizontal="@dimen/spacing_normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_double3"
                android:backgroundTint="@color/blueTertiary"
                android:text="@string/share_app"
                android:textColor="@color/whitePrimary"
                android:textSize="14sp"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blueTertiary"
                android:text="@string/submit"
                android:textColor="@color/whitePrimary"
                android:textSize="14sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>