<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePrimary"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_normal"
            android:text="@string/mobile_number_verification"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/otpSentTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/otp_sent_to" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/otpLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otpET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_double3"
                        android:layout_marginEnd="@dimen/spacing_double3"
                        android:focusable="true"
                        android:gravity="center"
                        android:hint="@string/enter_verification_code"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="6"
                        android:padding="@dimen/spacing_normal"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/verifyOTPButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/spacing_double2"
                    android:backgroundTint="@color/blueTertiary"
                    android:text="@string/verify_otp"
                    android:textColor="@color/whitePrimary"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/notReceivedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/no_otp" />

                <LinearLayout
                    android:id="@+id/resendLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/resendButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/graySecondary"
                        android:text="@string/resend_otp"
                        android:textColor="@color/blackPrimary"
                        android:textSize="12sp"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/changeNumberButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/blueTertiary"
                        android:text="@string/change_number"
                        android:textColor="@color/whitePrimary"
                        android:textSize="12sp"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/registerLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_double2"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/noAccountText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/no_account" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/blueTertiary"
                    android:text="@string/register"
                    android:textColor="@color/whitePrimary"
                    android:textSize="14sp"
                    android:visibility="visible" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>