<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_top_corner"
        android:gravity="center"
        android:padding="@dimen/spacing_normal"
        android:text="@string/alert"
        android:textColor="@color/whitePrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_corner"
        android:orientation="vertical"
        android:paddingBottom="@dimen/spacing_double">

        <TextView
            android:id="@+id/messageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_double"
            android:text="@string/no_data"
            android:textColor="@color/blackTertiary"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_double"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_double2"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/okay"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
